(ci) debug submodule

--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -32,6 +32,12 @@ jobs:
         with:
           submodules: 'true'
           token: ${{ secrets.ACCESS_TOKEN }}
+
+      - name: Debug submodule
+        run: |
+          git submodule status
+          git submodule update --init --recursive
+          ls -la
         
       - name: Verify submodule location
         run: |
