--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -19,10 +19,13 @@ jobs:
           toolchain: stable
           override: true
           target: wasm32-unknown-unknown
-      
-      - uses: Swatinem/rust-cache@v1
 
-      - uses: taiki-e/install-action@cargo-binstall
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-all-crates: "true"
+          cache-on-failure: "false"
+
+      - uses: cargo-bins/cargo-binstall@main
 
       - name: Install dioxus-cli
         run: cargo binstall -y dioxus-cli@0.6.1 --force
@@ -35,6 +38,9 @@ jobs:
       
       - name: Build
         run: dx build --release --platform web
+
+      - name: Copy index to 404.html for gh-pages
+        run: cp target/dx/language-forum/release/web/public/index.html target/dx/language-forum/release/web/public/404.html
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v4
